# biperscan

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: Docs.yml  Publish.yml  Wheels.yml
docs/: conf.py  examples.rst  index.rst  reference.rst
notebooks/: Compute_Trends.ipynb  Diabetes_Bifiltration.ipynb  Horse_Bifiltration.ipynb  How_BPSCAN_works.ipynb  JoinTreePlots.ipynb  Simplicial_Complex.ipynb
notebooks/data/diabetes/: umap_embedding.npy
notebooks/data/five_circles/: ReadMe.md
notebooks/data/flared/: ReadMe.md
notebooks/lib/: drawing.py
notebooks/lib/mpp/: JoinTree.py  JoinTreeSequence.py  SuperJoinTree.py  util.py
src/biperscan/: __init__.py  _impl.pxd  _impl.pyx  api.py  lenses.py  plots.py
src/biperscan/cpp/: .clang-format  CMakeLists.txt  biperscan.h  graded_matrix.xlsx  py_biperscan.h
src/biperscan/cpp/lib/: algorithm.h  base_types.h  bigrade_ordering.h  concepts.h  graded_matrix.h  linkage_hierarchy.h  minimal_presentation.h  minimal_presentation_graph.h  minimal_presentation_iteration_state.h  minimal_presentation_merges.h  ostream.cpp  ostream.h
src/biperscan/cpp/tests/: CMakeLists.txt  npy.h  test_algorithm.cpp  test_bigrade_ordering.cpp  test_graded_matrix.cpp  test_linkage_hierarchy.cpp  test_minimal_presentation.cpp  test_minimal_presentation_merges.cpp
src/biperscan/cpp/tests/data/: flareable_new_lens.npy  horse_distance.npy  horse_lens.npy
src/biperscan/cpp/trial_scripts/: CMakeLists.txt  try_demo.cpp  try_flareable.cpp  try_horse.cpp  try_py_bifiltrate.cpp  try_small_bifiltrate.cpp
src/biperscan/tests/: test_biperscan.py
